@@ -8,14 +8,17 @@ import org.springframework.security.config.annotation.method.configuration.Enabl
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
 import org.springframework.security.web.server.SecurityWebFilterChain;
+import org.springframework.security.web.server.context.NoOpServerSecurityContextRepository;
 import org.springframework.security.web.server.util.matcher.PathPatternParserServerWebExchangeMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import java.util.Arrays;
+import java.util.List;
+
+import static org.springframework.security.oauth2.core.authorization.OAuth2ReactiveAuthorizationManagers.hasScope;
 
 @Configuration
-@EnableReactiveMethodSecurity
 @EnableWebFluxSecurity
 public class WebSecurityConfig {
 
@@ -26,20 +29,21 @@ public class WebSecurityConfig {
                 .cors(cors -> cors.configurationSource(corsWebFilter()))
                 .authorizeExchange((exchanges) -> exchanges
                         .pathMatchers(HttpMethod.GET, "/movies/**" )
-                        .hasAuthority("SCOPE_read")
+                        .access(hasScope("read"))
                         .pathMatchers(HttpMethod.POST, "/movies/**")
-                        .hasAuthority("SCOPE_write")
+                        .access(hasScope("write"))
                         .pathMatchers("/**")
                         .permitAll()
                         .anyExchange().authenticated()
+
                 ).oauth2ResourceServer(oauth2 -> oauth2.jwt(Customizer.withDefaults()))
-//                .formLogin(form -> form.disable())
+                .securityContextRepository(NoOpServerSecurityContextRepository.getInstance())
                 .build();
     }
-@Bean
+    @Bean
     CorsConfigurationSource corsWebFilter() {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        corsConfiguration.setAllowedOrigins(List.of("http://frontend:3000"));
         corsConfiguration.setMaxAge(8000L);
         corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST"));
         corsConfiguration.setAllowedHeaders(Arrays.asList("Authorization", ""));
@@ -47,4 +51,4 @@ public class WebSecurityConfig {
         source.registerCorsConfiguration("/**", corsConfiguration);
         return source;
     }
-}
+    }
